parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    MOD
    NOT
    NULL

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMICOLON vars funcs
Rule 2     vars -> VAR varaux
Rule 3     varaux -> tipo varaux2 SEMICOLON varaux
Rule 4     varaux -> tipo varaux2 SEMICOLON
Rule 5     varaux2 -> ID
Rule 6     varaux2 -> ID COMMA varaux2
Rule 7     varaux2 -> ID LCORCH CTE_I RCORCH
Rule 8     varaux2 -> ID LCORCH CTE_I RCORCH COMMA varaux2
Rule 9     varaux2 -> ID LCORCH CTE_I RCORCH LCORCH CTE_I RCORCH
Rule 10    varaux2 -> ID LCORCH CTE_I RCORCH LCORCH CTE_I RCORCH COMMA varaux2
Rule 11    tipo -> INT
Rule 12    tipo -> FLOAT
Rule 13    tipo -> CHAR
Rule 14    tipo -> STRING
Rule 15    funcs -> principal
Rule 16    funcs -> funcsaux principal
Rule 17    principal -> PRINCIPAL bloque
Rule 18    funcsaux -> func
Rule 19    funcsaux -> func funcsaux
Rule 20    func -> FUNCION funcaux
Rule 21    funcaux -> tipo funcaux2
Rule 22    funcaux -> VOID funcaux2
Rule 23    funcaux2 -> ID LPARENT funcaux3 RPARENT vars bloque
Rule 24    funcaux3 -> tipo ID
Rule 25    funcaux3 -> tipo ID COMMA funcaux3
Rule 26    bloque -> LBRACE RBRACE
Rule 27    bloque -> LBRACE bloqueaux RBRACE
Rule 28    bloqueaux -> estatuto
Rule 29    bloqueaux -> estatuto bloqueaux
Rule 30    bloqueaux -> retorno
Rule 31    estatuto -> asignacion
Rule 32    estatuto -> si
Rule 33    estatuto -> mientras
Rule 34    estatuto -> desde
Rule 35    estatuto -> lectura
Rule 36    estatuto -> escritura
Rule 37    si -> siaux
Rule 38    si -> siaux SINO bloque
Rule 39    siaux -> SI LPARENT expresion RPARENT ENTONCES bloque
Rule 40    asignacion -> ID asignacionaux SEMICOLON
Rule 41    asignacionaux -> IGUAL expresion
Rule 42    asignacionaux -> dimensiones IGUAL expresion
Rule 43    dimensiones -> LCORCH pos RCORCH
Rule 44    dimensiones -> LCORCH pos COMMA pos RCORCH
Rule 45    pos -> ID
Rule 46    pos -> CTE_I
Rule 47    retorno -> REGRESA LPARENT exp RPARENT SEMICOLON
Rule 48    lectura -> LEE LPARENT dimensiones RPARENT SEMICOLON
Rule 49    escritura -> ESCRIBE LPARENT escrituraaux RPARENT SEMICOLON
Rule 50    escrituraaux -> CTE_S
Rule 51    escrituraaux -> expresion
Rule 52    escrituraaux -> CTE_S COMMA escrituraaux
Rule 53    escrituraaux -> expresion COMMA escrituraaux
Rule 54    mientras -> MIENTRAS LPARENT expresion RPARENT HAZ bloque
Rule 55    desde -> DESDE desdeaux HASTA exp HACER bloque
Rule 56    desdeaux -> ID IGUAL exp
Rule 57    desdeaux -> ID dimensiones IGUAL exp
Rule 58    expresion -> expr
Rule 59    expresion -> expr log expresion
Rule 60    expr -> exp
Rule 61    expr -> exp rel expr
Rule 62    exp -> termino
Rule 63    exp -> termino MAS exp
Rule 64    exp -> termino MENOS exp
Rule 65    termino -> factor
Rule 66    termino -> factor MULT termino
Rule 67    termino -> factor DIV termino
Rule 68    factor -> LCORCH expresion RCORCH
Rule 69    factor -> var_cte
Rule 70    factor -> MAS var_cte
Rule 71    factor -> MENOS var_cte
Rule 72    var_cte -> ID
Rule 73    var_cte -> CTE_I
Rule 74    var_cte -> CTE_F
Rule 75    var_cte -> CTE_S
Rule 76    var_cte -> CTE_C
Rule 77    log -> AND
Rule 78    log -> OR
Rule 79    rel -> MENOR
Rule 80    rel -> MAYOR
Rule 81    rel -> MENORIGUAL
Rule 82    rel -> MAYORIGUAL
Rule 83    rel -> COMPARE
Rule 84    rel -> DIFFERENT
Rule 85    CTE -> CTE_I
Rule 86    CTE -> CTE_F
Rule 87    CTE -> CTE_CH
Rule 88    CTE -> CTE_STRING
Rule 89    CTE -> FUNCION

Terminals, with rules where they appear

AND                  : 77
CHAR                 : 13
COLON                : 
COMMA                : 6 8 10 25 44 52 53
COMMENT              : 
COMPARE              : 83
CTE_C                : 76
CTE_CH               : 87
CTE_F                : 74 86
CTE_I                : 7 8 9 9 10 10 46 73 85
CTE_S                : 50 52 75
CTE_STRING           : 88
DESDE                : 55
DIFFERENT            : 84
DIV                  : 67
ENTONCES             : 39
ESCRIBE              : 49
FLOAT                : 12
FUNCION              : 20 89
HACER                : 55
HASTA                : 55
HAZ                  : 54
ID                   : 1 5 6 7 8 9 10 23 24 25 40 45 56 57 72
IGUAL                : 41 42 56 57
INT                  : 11
LBRACE               : 26 27
LCORCH               : 7 8 9 9 10 10 43 44 68
LEE                  : 48
LPARENT              : 23 39 47 48 49 54
MAS                  : 63 70
MAYOR                : 80
MAYORIGUAL           : 82
MENOR                : 79
MENORIGUAL           : 81
MENOS                : 64 71
MIENTRAS             : 54
MOD                  : 
MULT                 : 66
NOT                  : 
NULL                 : 
OR                   : 78
PRINCIPAL            : 17
PROGRAMA             : 1
RBRACE               : 26 27
RCORCH               : 7 8 9 9 10 10 43 44 68
REGRESA              : 47
RPARENT              : 23 39 47 48 49 54
SEMICOLON            : 1 3 4 40 47 48 49
SI                   : 39
SINO                 : 38
STRING               : 14
VAR                  : 2
VOID                 : 22
error                : 

Nonterminals, with rules where they appear

CTE                  : 
asignacion           : 31
asignacionaux        : 40
bloque               : 17 23 38 39 54 55
bloqueaux            : 27 29
desde                : 34
desdeaux             : 55
dimensiones          : 42 48 57
escritura            : 36
escrituraaux         : 49 52 53
estatuto             : 28 29
exp                  : 47 55 56 57 60 61 63 64
expr                 : 58 59 61
expresion            : 39 41 42 51 53 54 59 68
factor               : 65 66 67
func                 : 18 19
funcaux              : 20
funcaux2             : 21 22
funcaux3             : 23 25
funcs                : 1
funcsaux             : 16 19
lectura              : 35
log                  : 59
mientras             : 33
pos                  : 43 44 44
principal            : 15 16
programa             : 0
rel                  : 61
retorno              : 30
si                   : 32
siaux                : 37 38
termino              : 62 63 64 66 67
tipo                 : 3 4 21 24 25
var_cte              : 69 70 71
varaux               : 2 3
varaux2              : 3 4 6 8 10
vars                 : 1 23

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMICOLON vars funcs

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMICOLON vars funcs

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMICOLON vars funcs

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMICOLON . vars funcs
    (2) vars -> . VAR varaux

    VAR             shift and go to state 6

    vars                           shift and go to state 5

state 5

    (1) programa -> PROGRAMA ID SEMICOLON vars . funcs
    (15) funcs -> . principal
    (16) funcs -> . funcsaux principal
    (17) principal -> . PRINCIPAL bloque
    (18) funcsaux -> . func
    (19) funcsaux -> . func funcsaux
    (20) func -> . FUNCION funcaux

    PRINCIPAL       shift and go to state 10
    FUNCION         shift and go to state 12

    funcs                          shift and go to state 7
    principal                      shift and go to state 8
    funcsaux                       shift and go to state 9
    func                           shift and go to state 11

state 6

    (2) vars -> VAR . varaux
    (3) varaux -> . tipo varaux2 SEMICOLON varaux
    (4) varaux -> . tipo varaux2 SEMICOLON
    (11) tipo -> . INT
    (12) tipo -> . FLOAT
    (13) tipo -> . CHAR
    (14) tipo -> . STRING

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    STRING          shift and go to state 18

    varaux                         shift and go to state 13
    tipo                           shift and go to state 14

state 7

    (1) programa -> PROGRAMA ID SEMICOLON vars funcs .

    $end            reduce using rule 1 (programa -> PROGRAMA ID SEMICOLON vars funcs .)


state 8

    (15) funcs -> principal .

    $end            reduce using rule 15 (funcs -> principal .)


state 9

    (16) funcs -> funcsaux . principal
    (17) principal -> . PRINCIPAL bloque

    PRINCIPAL       shift and go to state 10

    principal                      shift and go to state 19

state 10

    (17) principal -> PRINCIPAL . bloque
    (26) bloque -> . LBRACE RBRACE
    (27) bloque -> . LBRACE bloqueaux RBRACE

    LBRACE          shift and go to state 21

    bloque                         shift and go to state 20

state 11

    (18) funcsaux -> func .
    (19) funcsaux -> func . funcsaux
    (18) funcsaux -> . func
    (19) funcsaux -> . func funcsaux
    (20) func -> . FUNCION funcaux

    PRINCIPAL       reduce using rule 18 (funcsaux -> func .)
    FUNCION         shift and go to state 12

    func                           shift and go to state 11
    funcsaux                       shift and go to state 22

state 12

    (20) func -> FUNCION . funcaux
    (21) funcaux -> . tipo funcaux2
    (22) funcaux -> . VOID funcaux2
    (11) tipo -> . INT
    (12) tipo -> . FLOAT
    (13) tipo -> . CHAR
    (14) tipo -> . STRING

    VOID            shift and go to state 25
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    STRING          shift and go to state 18

    funcaux                        shift and go to state 23
    tipo                           shift and go to state 24

state 13

    (2) vars -> VAR varaux .

    PRINCIPAL       reduce using rule 2 (vars -> VAR varaux .)
    FUNCION         reduce using rule 2 (vars -> VAR varaux .)
    LBRACE          reduce using rule 2 (vars -> VAR varaux .)


state 14

    (3) varaux -> tipo . varaux2 SEMICOLON varaux
    (4) varaux -> tipo . varaux2 SEMICOLON
    (5) varaux2 -> . ID
    (6) varaux2 -> . ID COMMA varaux2
    (7) varaux2 -> . ID LCORCH CTE_I RCORCH
    (8) varaux2 -> . ID LCORCH CTE_I RCORCH COMMA varaux2
    (9) varaux2 -> . ID LCORCH CTE_I RCORCH LCORCH CTE_I RCORCH
    (10) varaux2 -> . ID LCORCH CTE_I RCORCH LCORCH CTE_I RCORCH COMMA varaux2

    ID              shift and go to state 27

    varaux2                        shift and go to state 26

state 15

    (11) tipo -> INT .

    ID              reduce using rule 11 (tipo -> INT .)


state 16

    (12) tipo -> FLOAT .

    ID              reduce using rule 12 (tipo -> FLOAT .)


state 17

    (13) tipo -> CHAR .

    ID              reduce using rule 13 (tipo -> CHAR .)


state 18

    (14) tipo -> STRING .

    ID              reduce using rule 14 (tipo -> STRING .)


state 19

    (16) funcs -> funcsaux principal .

    $end            reduce using rule 16 (funcs -> funcsaux principal .)


state 20

    (17) principal -> PRINCIPAL bloque .

    $end            reduce using rule 17 (principal -> PRINCIPAL bloque .)


state 21

    (26) bloque -> LBRACE . RBRACE
    (27) bloque -> LBRACE . bloqueaux RBRACE
    (28) bloqueaux -> . estatuto
    (29) bloqueaux -> . estatuto bloqueaux
    (30) bloqueaux -> . retorno
    (31) estatuto -> . asignacion
    (32) estatuto -> . si
    (33) estatuto -> . mientras
    (34) estatuto -> . desde
    (35) estatuto -> . lectura
    (36) estatuto -> . escritura
    (47) retorno -> . REGRESA LPARENT exp RPARENT SEMICOLON
    (40) asignacion -> . ID asignacionaux SEMICOLON
    (37) si -> . siaux
    (38) si -> . siaux SINO bloque
    (54) mientras -> . MIENTRAS LPARENT expresion RPARENT HAZ bloque
    (55) desde -> . DESDE desdeaux HASTA exp HACER bloque
    (48) lectura -> . LEE LPARENT dimensiones RPARENT SEMICOLON
    (49) escritura -> . ESCRIBE LPARENT escrituraaux RPARENT SEMICOLON
    (39) siaux -> . SI LPARENT expresion RPARENT ENTONCES bloque

    RBRACE          shift and go to state 28
    REGRESA         shift and go to state 38
    ID              shift and go to state 39
    MIENTRAS        shift and go to state 41
    DESDE           shift and go to state 42
    LEE             shift and go to state 43
    ESCRIBE         shift and go to state 44
    SI              shift and go to state 45

    bloqueaux                      shift and go to state 29
    estatuto                       shift and go to state 30
    retorno                        shift and go to state 31
    asignacion                     shift and go to state 32
    si                             shift and go to state 33
    mientras                       shift and go to state 34
    desde                          shift and go to state 35
    lectura                        shift and go to state 36
    escritura                      shift and go to state 37
    siaux                          shift and go to state 40

state 22

    (19) funcsaux -> func funcsaux .

    PRINCIPAL       reduce using rule 19 (funcsaux -> func funcsaux .)


state 23

    (20) func -> FUNCION funcaux .

    FUNCION         reduce using rule 20 (func -> FUNCION funcaux .)
    PRINCIPAL       reduce using rule 20 (func -> FUNCION funcaux .)


state 24

    (21) funcaux -> tipo . funcaux2
    (23) funcaux2 -> . ID LPARENT funcaux3 RPARENT vars bloque

    ID              shift and go to state 47

    funcaux2                       shift and go to state 46

state 25

    (22) funcaux -> VOID . funcaux2
    (23) funcaux2 -> . ID LPARENT funcaux3 RPARENT vars bloque

    ID              shift and go to state 47

    funcaux2                       shift and go to state 48

state 26

    (3) varaux -> tipo varaux2 . SEMICOLON varaux
    (4) varaux -> tipo varaux2 . SEMICOLON

    SEMICOLON       shift and go to state 49


state 27

    (5) varaux2 -> ID .
    (6) varaux2 -> ID . COMMA varaux2
    (7) varaux2 -> ID . LCORCH CTE_I RCORCH
    (8) varaux2 -> ID . LCORCH CTE_I RCORCH COMMA varaux2
    (9) varaux2 -> ID . LCORCH CTE_I RCORCH LCORCH CTE_I RCORCH
    (10) varaux2 -> ID . LCORCH CTE_I RCORCH LCORCH CTE_I RCORCH COMMA varaux2

    SEMICOLON       reduce using rule 5 (varaux2 -> ID .)
    COMMA           shift and go to state 50
    LCORCH          shift and go to state 51


state 28

    (26) bloque -> LBRACE RBRACE .

    $end            reduce using rule 26 (bloque -> LBRACE RBRACE .)
    REGRESA         reduce using rule 26 (bloque -> LBRACE RBRACE .)
    ID              reduce using rule 26 (bloque -> LBRACE RBRACE .)
    MIENTRAS        reduce using rule 26 (bloque -> LBRACE RBRACE .)
    DESDE           reduce using rule 26 (bloque -> LBRACE RBRACE .)
    LEE             reduce using rule 26 (bloque -> LBRACE RBRACE .)
    ESCRIBE         reduce using rule 26 (bloque -> LBRACE RBRACE .)
    SI              reduce using rule 26 (bloque -> LBRACE RBRACE .)
    RBRACE          reduce using rule 26 (bloque -> LBRACE RBRACE .)
    SINO            reduce using rule 26 (bloque -> LBRACE RBRACE .)
    FUNCION         reduce using rule 26 (bloque -> LBRACE RBRACE .)
    PRINCIPAL       reduce using rule 26 (bloque -> LBRACE RBRACE .)


state 29

    (27) bloque -> LBRACE bloqueaux . RBRACE

    RBRACE          shift and go to state 52


state 30

    (28) bloqueaux -> estatuto .
    (29) bloqueaux -> estatuto . bloqueaux
    (28) bloqueaux -> . estatuto
    (29) bloqueaux -> . estatuto bloqueaux
    (30) bloqueaux -> . retorno
    (31) estatuto -> . asignacion
    (32) estatuto -> . si
    (33) estatuto -> . mientras
    (34) estatuto -> . desde
    (35) estatuto -> . lectura
    (36) estatuto -> . escritura
    (47) retorno -> . REGRESA LPARENT exp RPARENT SEMICOLON
    (40) asignacion -> . ID asignacionaux SEMICOLON
    (37) si -> . siaux
    (38) si -> . siaux SINO bloque
    (54) mientras -> . MIENTRAS LPARENT expresion RPARENT HAZ bloque
    (55) desde -> . DESDE desdeaux HASTA exp HACER bloque
    (48) lectura -> . LEE LPARENT dimensiones RPARENT SEMICOLON
    (49) escritura -> . ESCRIBE LPARENT escrituraaux RPARENT SEMICOLON
    (39) siaux -> . SI LPARENT expresion RPARENT ENTONCES bloque

    RBRACE          reduce using rule 28 (bloqueaux -> estatuto .)
    REGRESA         shift and go to state 38
    ID              shift and go to state 39
    MIENTRAS        shift and go to state 41
    DESDE           shift and go to state 42
    LEE             shift and go to state 43
    ESCRIBE         shift and go to state 44
    SI              shift and go to state 45

    estatuto                       shift and go to state 30
    bloqueaux                      shift and go to state 53
    retorno                        shift and go to state 31
    asignacion                     shift and go to state 32
    si                             shift and go to state 33
    mientras                       shift and go to state 34
    desde                          shift and go to state 35
    lectura                        shift and go to state 36
    escritura                      shift and go to state 37
    siaux                          shift and go to state 40

state 31

    (30) bloqueaux -> retorno .

    RBRACE          reduce using rule 30 (bloqueaux -> retorno .)


state 32

    (31) estatuto -> asignacion .

    REGRESA         reduce using rule 31 (estatuto -> asignacion .)
    ID              reduce using rule 31 (estatuto -> asignacion .)
    MIENTRAS        reduce using rule 31 (estatuto -> asignacion .)
    DESDE           reduce using rule 31 (estatuto -> asignacion .)
    LEE             reduce using rule 31 (estatuto -> asignacion .)
    ESCRIBE         reduce using rule 31 (estatuto -> asignacion .)
    SI              reduce using rule 31 (estatuto -> asignacion .)
    RBRACE          reduce using rule 31 (estatuto -> asignacion .)


state 33

    (32) estatuto -> si .

    REGRESA         reduce using rule 32 (estatuto -> si .)
    ID              reduce using rule 32 (estatuto -> si .)
    MIENTRAS        reduce using rule 32 (estatuto -> si .)
    DESDE           reduce using rule 32 (estatuto -> si .)
    LEE             reduce using rule 32 (estatuto -> si .)
    ESCRIBE         reduce using rule 32 (estatuto -> si .)
    SI              reduce using rule 32 (estatuto -> si .)
    RBRACE          reduce using rule 32 (estatuto -> si .)


state 34

    (33) estatuto -> mientras .

    REGRESA         reduce using rule 33 (estatuto -> mientras .)
    ID              reduce using rule 33 (estatuto -> mientras .)
    MIENTRAS        reduce using rule 33 (estatuto -> mientras .)
    DESDE           reduce using rule 33 (estatuto -> mientras .)
    LEE             reduce using rule 33 (estatuto -> mientras .)
    ESCRIBE         reduce using rule 33 (estatuto -> mientras .)
    SI              reduce using rule 33 (estatuto -> mientras .)
    RBRACE          reduce using rule 33 (estatuto -> mientras .)


state 35

    (34) estatuto -> desde .

    REGRESA         reduce using rule 34 (estatuto -> desde .)
    ID              reduce using rule 34 (estatuto -> desde .)
    MIENTRAS        reduce using rule 34 (estatuto -> desde .)
    DESDE           reduce using rule 34 (estatuto -> desde .)
    LEE             reduce using rule 34 (estatuto -> desde .)
    ESCRIBE         reduce using rule 34 (estatuto -> desde .)
    SI              reduce using rule 34 (estatuto -> desde .)
    RBRACE          reduce using rule 34 (estatuto -> desde .)


state 36

    (35) estatuto -> lectura .

    REGRESA         reduce using rule 35 (estatuto -> lectura .)
    ID              reduce using rule 35 (estatuto -> lectura .)
    MIENTRAS        reduce using rule 35 (estatuto -> lectura .)
    DESDE           reduce using rule 35 (estatuto -> lectura .)
    LEE             reduce using rule 35 (estatuto -> lectura .)
    ESCRIBE         reduce using rule 35 (estatuto -> lectura .)
    SI              reduce using rule 35 (estatuto -> lectura .)
    RBRACE          reduce using rule 35 (estatuto -> lectura .)


state 37

    (36) estatuto -> escritura .

    REGRESA         reduce using rule 36 (estatuto -> escritura .)
    ID              reduce using rule 36 (estatuto -> escritura .)
    MIENTRAS        reduce using rule 36 (estatuto -> escritura .)
    DESDE           reduce using rule 36 (estatuto -> escritura .)
    LEE             reduce using rule 36 (estatuto -> escritura .)
    ESCRIBE         reduce using rule 36 (estatuto -> escritura .)
    SI              reduce using rule 36 (estatuto -> escritura .)
    RBRACE          reduce using rule 36 (estatuto -> escritura .)


state 38

    (47) retorno -> REGRESA . LPARENT exp RPARENT SEMICOLON

    LPARENT         shift and go to state 54


state 39

    (40) asignacion -> ID . asignacionaux SEMICOLON
    (41) asignacionaux -> . IGUAL expresion
    (42) asignacionaux -> . dimensiones IGUAL expresion
    (43) dimensiones -> . LCORCH pos RCORCH
    (44) dimensiones -> . LCORCH pos COMMA pos RCORCH

    IGUAL           shift and go to state 56
    LCORCH          shift and go to state 58

    asignacionaux                  shift and go to state 55
    dimensiones                    shift and go to state 57

state 40

    (37) si -> siaux .
    (38) si -> siaux . SINO bloque

    REGRESA         reduce using rule 37 (si -> siaux .)
    ID              reduce using rule 37 (si -> siaux .)
    MIENTRAS        reduce using rule 37 (si -> siaux .)
    DESDE           reduce using rule 37 (si -> siaux .)
    LEE             reduce using rule 37 (si -> siaux .)
    ESCRIBE         reduce using rule 37 (si -> siaux .)
    SI              reduce using rule 37 (si -> siaux .)
    RBRACE          reduce using rule 37 (si -> siaux .)
    SINO            shift and go to state 59


state 41

    (54) mientras -> MIENTRAS . LPARENT expresion RPARENT HAZ bloque

    LPARENT         shift and go to state 60


state 42

    (55) desde -> DESDE . desdeaux HASTA exp HACER bloque
    (56) desdeaux -> . ID IGUAL exp
    (57) desdeaux -> . ID dimensiones IGUAL exp

    ID              shift and go to state 62

    desdeaux                       shift and go to state 61

state 43

    (48) lectura -> LEE . LPARENT dimensiones RPARENT SEMICOLON

    LPARENT         shift and go to state 63


state 44

    (49) escritura -> ESCRIBE . LPARENT escrituraaux RPARENT SEMICOLON

    LPARENT         shift and go to state 64


state 45

    (39) siaux -> SI . LPARENT expresion RPARENT ENTONCES bloque

    LPARENT         shift and go to state 65


state 46

    (21) funcaux -> tipo funcaux2 .

    FUNCION         reduce using rule 21 (funcaux -> tipo funcaux2 .)
    PRINCIPAL       reduce using rule 21 (funcaux -> tipo funcaux2 .)


state 47

    (23) funcaux2 -> ID . LPARENT funcaux3 RPARENT vars bloque

    LPARENT         shift and go to state 66


state 48

    (22) funcaux -> VOID funcaux2 .

    FUNCION         reduce using rule 22 (funcaux -> VOID funcaux2 .)
    PRINCIPAL       reduce using rule 22 (funcaux -> VOID funcaux2 .)


state 49

    (3) varaux -> tipo varaux2 SEMICOLON . varaux
    (4) varaux -> tipo varaux2 SEMICOLON .
    (3) varaux -> . tipo varaux2 SEMICOLON varaux
    (4) varaux -> . tipo varaux2 SEMICOLON
    (11) tipo -> . INT
    (12) tipo -> . FLOAT
    (13) tipo -> . CHAR
    (14) tipo -> . STRING

    PRINCIPAL       reduce using rule 4 (varaux -> tipo varaux2 SEMICOLON .)
    FUNCION         reduce using rule 4 (varaux -> tipo varaux2 SEMICOLON .)
    LBRACE          reduce using rule 4 (varaux -> tipo varaux2 SEMICOLON .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    STRING          shift and go to state 18

    tipo                           shift and go to state 14
    varaux                         shift and go to state 67

state 50

    (6) varaux2 -> ID COMMA . varaux2
    (5) varaux2 -> . ID
    (6) varaux2 -> . ID COMMA varaux2
    (7) varaux2 -> . ID LCORCH CTE_I RCORCH
    (8) varaux2 -> . ID LCORCH CTE_I RCORCH COMMA varaux2
    (9) varaux2 -> . ID LCORCH CTE_I RCORCH LCORCH CTE_I RCORCH
    (10) varaux2 -> . ID LCORCH CTE_I RCORCH LCORCH CTE_I RCORCH COMMA varaux2

    ID              shift and go to state 27

    varaux2                        shift and go to state 68

state 51

    (7) varaux2 -> ID LCORCH . CTE_I RCORCH
    (8) varaux2 -> ID LCORCH . CTE_I RCORCH COMMA varaux2
    (9) varaux2 -> ID LCORCH . CTE_I RCORCH LCORCH CTE_I RCORCH
    (10) varaux2 -> ID LCORCH . CTE_I RCORCH LCORCH CTE_I RCORCH COMMA varaux2

    CTE_I           shift and go to state 69


state 52

    (27) bloque -> LBRACE bloqueaux RBRACE .

    $end            reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    REGRESA         reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    ID              reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    MIENTRAS        reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    DESDE           reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    LEE             reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    ESCRIBE         reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    SI              reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    RBRACE          reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    SINO            reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    FUNCION         reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)
    PRINCIPAL       reduce using rule 27 (bloque -> LBRACE bloqueaux RBRACE .)


state 53

    (29) bloqueaux -> estatuto bloqueaux .

    RBRACE          reduce using rule 29 (bloqueaux -> estatuto bloqueaux .)


state 54

    (47) retorno -> REGRESA LPARENT . exp RPARENT SEMICOLON
    (62) exp -> . termino
    (63) exp -> . termino MAS exp
    (64) exp -> . termino MENOS exp
    (65) termino -> . factor
    (66) termino -> . factor MULT termino
    (67) termino -> . factor DIV termino
    (68) factor -> . LCORCH expresion RCORCH
    (69) factor -> . var_cte
    (70) factor -> . MAS var_cte
    (71) factor -> . MENOS var_cte
    (72) var_cte -> . ID
    (73) var_cte -> . CTE_I
    (74) var_cte -> . CTE_F
    (75) var_cte -> . CTE_S
    (76) var_cte -> . CTE_C

    LCORCH          shift and go to state 75
    MAS             shift and go to state 72
    MENOS           shift and go to state 73
    ID              shift and go to state 77
    CTE_I           shift and go to state 78
    CTE_F           shift and go to state 79
    CTE_S           shift and go to state 80
    CTE_C           shift and go to state 81

    exp                            shift and go to state 70
    termino                        shift and go to state 71
    factor                         shift and go to state 74
    var_cte                        shift and go to state 76

state 55

    (40) asignacion -> ID asignacionaux . SEMICOLON

    SEMICOLON       shift and go to state 82


state 56

    (41) asignacionaux -> IGUAL . expresion
    (58) expresion -> . expr
    (59) expresion -> . expr log expresion
    (60) expr -> . exp
    (61) expr -> . exp rel expr
    (62) exp -> . termino
    (63) exp -> . termino MAS exp
    (64) exp -> . termino MENOS exp
    (65) termino -> . factor
    (66) termino -> . factor MULT termino
    (67) termino -> . factor DIV termino
    (68) factor -> . LCORCH expresion RCORCH
    (69) factor -> . var_cte
    (70) factor -> . MAS var_cte
    (71) factor -> . MENOS var_cte
    (72) var_cte -> . ID
    (73) var_cte -> . CTE_I
    (74) var_cte -> . CTE_F
    (75) var_cte -> . CTE_S
    (76) var_cte -> . CTE_C

    LCORCH          shift and go to state 75
    MAS             shift and go to state 72
    MENOS           shift and go to state 73
    ID              shift and go to state 77
    CTE_I           shift and go to state 78
    CTE_F           shift and go to state 79
    CTE_S           shift and go to state 80
    CTE_C           shift and go to state 81

    expresion                      shift and go to state 83
    expr                           shift and go to state 84
    exp                            shift and go to state 85
    termino                        shift and go to state 71
    factor                         shift and go to state 74
    var_cte                        shift and go to state 76

state 57

    (42) asignacionaux -> dimensiones . IGUAL expresion

    IGUAL           shift and go to state 86


state 58

    (43) dimensiones -> LCORCH . pos RCORCH
    (44) dimensiones -> LCORCH . pos COMMA pos RCORCH
    (45) pos -> . ID
    (46) pos -> . CTE_I

    ID              shift and go to state 88
    CTE_I           shift and go to state 89

    pos                            shift and go to state 87

state 59

    (38) si -> siaux SINO . bloque
    (26) bloque -> . LBRACE RBRACE
    (27) bloque -> . LBRACE bloqueaux RBRACE

    LBRACE          shift and go to state 21

    bloque                         shift and go to state 90

state 60

    (54) mientras -> MIENTRAS LPARENT . expresion RPARENT HAZ bloque
    (58) expresion -> . expr
    (59) expresion -> . expr log expresion
    (60) expr -> . exp
    (61) expr -> . exp rel expr
    (62) exp -> . termino
    (63) exp -> . termino MAS exp
    (64) exp -> . termino MENOS exp
    (65) termino -> . factor
    (66) termino -> . factor MULT termino
    (67) termino -> . factor DIV termino
    (68) factor -> . LCORCH expresion RCORCH
    (69) factor -> . var_cte
    (70) factor -> . MAS var_cte
    (71) factor -> . MENOS var_cte
    (72) var_cte -> . ID
    (73) var_cte -> . CTE_I
    (74) var_cte -> . CTE_F
    (75) var_cte -> . CTE_S
    (76) var_cte -> . CTE_C

    LCORCH          shift and go to state 75
    MAS             shift and go to state 72
    MENOS           shift and go to state 73
    ID              shift and go to state 77
    CTE_I           shift and go to state 78
    CTE_F           shift and go to state 79
    CTE_S           shift and go to state 80
    CTE_C           shift and go to state 81

    expresion                      shift and go to state 91
    expr                           shift and go to state 84
    exp                            shift and go to state 85
    termino                        shift and go to state 71
    factor                         shift and go to state 74
    var_cte                        shift and go to state 76

state 61

    (55) desde -> DESDE desdeaux . HASTA exp HACER bloque

    HASTA           shift and go to state 92


state 62

    (56) desdeaux -> ID . IGUAL exp
    (57) desdeaux -> ID . dimensiones IGUAL exp
    (43) dimensiones -> . LCORCH pos RCORCH
    (44) dimensiones -> . LCORCH pos COMMA pos RCORCH

    IGUAL           shift and go to state 93
    LCORCH          shift and go to state 58

    dimensiones                    shift and go to state 94

state 63

    (48) lectura -> LEE LPARENT . dimensiones RPARENT SEMICOLON
    (43) dimensiones -> . LCORCH pos RCORCH
    (44) dimensiones -> . LCORCH pos COMMA pos RCORCH

    LCORCH          shift and go to state 58

    dimensiones                    shift and go to state 95

state 64

    (49) escritura -> ESCRIBE LPARENT . escrituraaux RPARENT SEMICOLON
    (50) escrituraaux -> . CTE_S
    (51) escrituraaux -> . expresion
    (52) escrituraaux -> . CTE_S COMMA escrituraaux
    (53) escrituraaux -> . expresion COMMA escrituraaux
    (58) expresion -> . expr
    (59) expresion -> . expr log expresion
    (60) expr -> . exp
    (61) expr -> . exp rel expr
    (62) exp -> . termino
    (63) exp -> . termino MAS exp
    (64) exp -> . termino MENOS exp
    (65) termino -> . factor
    (66) termino -> . factor MULT termino
    (67) termino -> . factor DIV termino
    (68) factor -> . LCORCH expresion RCORCH
    (69) factor -> . var_cte
    (70) factor -> . MAS var_cte
    (71) factor -> . MENOS var_cte
    (72) var_cte -> . ID
    (73) var_cte -> . CTE_I
    (74) var_cte -> . CTE_F
    (75) var_cte -> . CTE_S
    (76) var_cte -> . CTE_C

    CTE_S           shift and go to state 97
    LCORCH          shift and go to state 75
    MAS             shift and go to state 72
    MENOS           shift and go to state 73
    ID              shift and go to state 77
    CTE_I           shift and go to state 78
    CTE_F           shift and go to state 79
    CTE_C           shift and go to state 81
